# NeXaVerSe.MVP

./: .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  tidy.yml
apps/client/: App.tsx
apps/go-gateway/: Dockerfile
apps/go-gateway/cmd/: main.go
blockchain/contracts/contracts/: NexEscrow.sol
client/: App.tsx  package-lock.json  package.json
client/src/components/: CosmicCard.tsx  RankBadge.tsx
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: NeXacoin.sol  NexaStaking.sol
contracts/scripts/: deploy.js
contracts/test/: NexaEcosystem.js
go-gateway/: Dockerfile  go.mod  go.sum
go-gateway/cmd/: main.go
go-gateway/pkg/presence/: presence.go
go-gateway/pkg/websocket/: client.go  epoll_linux.go  epoll_windows.go  hub.go
infrastructure/: DEPLOYMENT.md
infrastructure/.github/workflows/: ci.yml  tidy.yml
infrastructure/scripts/: admin-test.js  mock-server.js  package-lock.json  staking-test.js
k8s/: nexaverse-services.yaml
nestjs-media/: Dockerfile  package-lock.json  package.json  tsconfig.build.json
nestjs-media/src/: app.module.ts  main.ts
nestjs-media/src/admin/: admin.controller.ts  (+1 more)
rust-ledger/: Cargo.toml  Dockerfile
rust-ledger/contracts/: NeXacoin.json  NexEscrow.json
rust-ledger/src/: batcher.rs  handlers.rs  main.rs  models.rs
scripts/: business-test.js  e2e-test.js  find-keys.js  marketplace-test.js  mock-server.js  package.json  rewards-test.js
services/nestjs-media/: Dockerfile  tsconfig.build.json
services/rust-ledger/: Cargo.toml  Dockerfile
(+23 files in other folders)
